--- a/joolun-ma/pages/order/order-detail/index.wxml
+++ b/joolun-ma/pages/order/order-detail/index.wxml
@@ -50,21 +50,35 @@
   <view class="cu-card article mar-top-30">
     <view class="cu-item">
       <view class="cu-list menu">
-        <navigator hover-class='none' url='/pages/goods/goods-detail/index?id={{item.spuId}}' class="cu-item" wx:for="{{ orderInfo.listOrderItem }}" wx:key>
-          <view class="flex align-center">
-            <view class="content">
-              <image src="{{item.picUrl ? item.picUrl : '/public/img/no_pic.png'}}" mode="aspectFill" class="row-img margin-top-xs"></image>
-              <view class="desc row-info">
-                <view class="text-black margin-top-sm overflow-2">{{item.spuName}}</view>
-                <view class="text-gray text-sm margin-top-sm overflow-2" wx:if="{{item.specInfo}}">{{item.specInfo}}</view>
-                <view class="flex justify-between">
-                  <view class="text-price text-bold text-red margin-top-sm padding-lr-sm">{{item.salesPrice}}</view>
-                  <view class="text-gray text-sm margin-top-sm padding-lr-sm">X{{item.quantity}}</view>
+        <view wx:for="{{ orderInfo.listOrderItem }}" wx:key>
+          <navigator hover-class='none' url='/pages/goods/goods-detail/index?id={{item.spuId}}' class="cu-item">
+            <view class="flex align-center">
+              <view class="content response">
+                <image src="{{item.picUrl ? item.picUrl : '/public/img/no_pic.png'}}" mode="aspectFill" class="row-img margin-top-xs"></image>
+                <view class="desc row-info">
+                  <view class="text-black margin-top-sm overflow-2">{{item.spuName}}</view>
+                  <view class="text-gray text-sm margin-top-sm overflow-2" wx:if="{{item.specInfo}}">{{item.specInfo}}</view>
+                  <view class="flex justify-between">
+                    <view class="text-price text-bold text-red margin-top-sm padding-lr-sm">{{item.salesPrice}}</view>
+                    <view class="text-black text-sm margin-top-sm padding-lr-sm">x{{item.quantity}}</view>
+                  </view>
                 </view>
               </view>
             </view>
+          </navigator>
+          <view class="cu-item text-right padding-sm">
+            <navigator class="cu-btn line sm" 
+              url='/pages/order/order-refunds/submit/index?orderItemId={{item.id}}'
+             wx:if="{{orderInfo.isPay == '1' && item.status == '0'}}">
+              申请售后
+            </navigator>
+            <navigator class="cu-btn line sm text-orange" 
+              url='/pages/order/order-refunds/form/index?orderItemId={{item.id}}'
+             wx:if="{{orderInfo.isPay == '1' && item.status != '0'}}">
+              {{item.statusDesc}}
+            </navigator>
           </view>
-        </navigator>
+        </view>
         <view class="cu-item">
           <view class="content">
             <text class="text-grey">商品总价</text>
