--- a/joolun-ma/pages/order/order-list/index.wxml
+++ b/joolun-ma/pages/order/order-list/index.wxml
@@ -26,15 +26,24 @@
             {{item.statusDesc}}
           </view>
         </view>
-        <view class="content" wx:for="{{ item.listOrderItem }}" wx:for-item="item2" wx:key wx:for-index="index2">
-          <image src="{{item2.picUrl ? item2.picUrl : '/public/img/no_pic.png'}}" mode="aspectFill" class="row-img margin-top-xs"></image>
-          <view class="desc row-info">
-            <view class="text-black margin-top-sm overflow-2">{{item2.spuName}}</view>
-            <view class="text-gray text-sm margin-top-sm overflow-2" wx:if="{{item2.specInfo}}">{{item2.specInfo}}</view>
-            <view class="flex justify-between">
-              <view class="text-price text-bold text-red margin-top-sm padding-lr-sm">{{item2.salesPrice}}</view>
-              <view class="text-gray text-sm margin-top-sm padding-lr-sm">X{{item2.quantity}}</view>
+        <view class="cu-item" wx:for="{{ item.listOrderItem }}" wx:for-item="item2" wx:key wx:for-index="index2">
+          <view class="content">
+            <image src="{{item2.picUrl ? item2.picUrl : '/public/img/no_pic.png'}}" mode="aspectFill" class="row-img margin-top-xs"></image>
+            <view class="desc row-info">
+              <view class="text-black margin-top-sm overflow-2">{{item2.spuName}}</view>
+              <view class="text-gray text-sm margin-top-sm overflow-2" wx:if="{{item2.specInfo}}">{{item2.specInfo}}</view>
+              <view class="flex justify-between">
+                <view class="text-price text-bold text-red margin-top-sm padding-lr-sm">{{item2.salesPrice}}</view>
+                <view class="text-black text-sm margin-top-sm padding-lr-sm">x{{item2.quantity}}</view>
+              </view>
             </view>
+          </view>
+          <view class="cu-item text-right padding-sm" catchtap>
+            <navigator class="cu-btn line sm text-orange" 
+              wx:if="{{item2.status != '0'}}"
+              url='/pages/order/order-refunds/form/index?orderItemId={{item2.id}}'>
+              {{item2.statusDesc}}
+            </navigator>
           </view>
         </view>
       </navigator>
@@ -45,8 +54,7 @@
         bind:orderReceive="orderCancel"
         bind:orderDel="orderDel"
         bind:unifiedOrder="unifiedOrder"
-        data-index="{{index}}"
-      />
+        data-index="{{index}}"/>
     </view>
   </view>
   <view class="cu-load bg-gray {{loadmore?'loading':'over'}}"></view>
