--- a/joolun-ma/utils/numberUtil.wxs
+++ b/joolun-ma/utils/numberUtil.wxs
@@ -4,11 +4,11 @@ var numberUtil = {
     return value.toFixed(num)
   },
   numberSubtract: function (value1, value2) {//减法运算value1-value2
-    var v = parseInt(value1) - parseInt(value2)
+    var v = parseFloat(value1) - parseFloat(value2)
     return v.toFixed(2)
   },
   numberAddition: function (value1, value2) {//加法运算value1+value2
-    var v = parseInt(value1) + parseInt(value2)
+    var v = parseFloat(value1) + parseFloat(value2)
     return v.toFixed(2)
   },
   getAreaDistance: function (lat1, lng1, lat2, lng2) {//计算经纬距离
